fix layout bugs

--- a/src/PROCERGS/VPR/CoreBundle/Resources/public/css/admin/admin.css
+++ b/src/PROCERGS/VPR/CoreBundle/Resources/public/css/admin/admin.css
@@ -138,6 +138,9 @@ form .user-roles input {
     display: inline-block;
     float: left;
     clear: both;
+    height: 20px;
+    margin: 0 10px 15px 0;
+    width: 20px;
 }
 form .user-roles label {
     display: inline-block;
