--- a/src/PROCERGS/VPR/CoreBundle/Resources/public/css/general.css
+++ b/src/PROCERGS/VPR/CoreBundle/Resources/public/css/general.css
@@ -598,3 +598,7 @@ input::-webkit-inner-spin-button {
     background-color: #FFF;
     color: #000;
 }
+
+#vote-places td {
+    padding: 10px;
+}
